--- a/package.json
+++ b/package.json
@@ -17,6 +17,19 @@
     "url": "https://github.com/JRRS1982/Config/issues"
   },
   "homepage": "https://github.com/JRRS1982/Config#readme",
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint": "*",
+    "eslint-config-airbnb-typescript": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-react": "*",
+    "eslint-plugin-react-hooks": "*",
+    "prettier": "*"
+  },
   "dependencies": {
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
